@@ -17,12 +17,14 @@
   (let*
       ((dur  (ly:music-property event 'tempo-unit))
        (count (ly:music-property event 'metronome-count))
-       (note-mark (make-note-by-number-markup (ly:duration-log dur)
+       (note-mark (make-smaller-markup
+		   (make-note-by-number-markup (ly:duration-log dur)
 					      (ly:duration-dot-count dur)
-					      1) ) ) 
+					      1))))
+    
     (make-line-markup
      (list
-      note-mark
+      (make-general-align-markup Y DOWN note-mark)
       (make-simple-markup  "=")
       (make-simple-markup (number->string count))
       
