@@ -1,3 +1,13 @@
+2004-07-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/lyric-engraver.cc: mention LyricText
+
+2004-07-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/translation-functions.scm (format-metronome-markup): backport.
+
+	* scm/define-markup-commands.scm (general-align): add  function.
+
 2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/axis-group-engraver.cc (process_acknowledged_grobs):
